// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Articles All types 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          oainnáhus
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"oainnáhus\\"]"
            target="_blank"
          >
            Search for oainnáhus in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            syn
          </span>
           
          N
           
          nob
        </span>
      </div>
    </div>
    <div>
      <div
        className="css-1marblh"
      >
        <div>
          Iskkan sihkkut váivves oainnáhusa iežan čalmmiin, muhto dat liikká čuovvu mu.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg prøver å vaske vekk det triste synet fra øynene mine, men det følger med likevel.
        </div>
      </div>
      <div
        className="css-1marblh"
      >
        <div>
          Lean áidna vilges olmmoš ja dieđusge oainnáhus.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg er det eneste hvite mennesket og selvfølgelig et syn.
        </div>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      smenob
    </div>
  </div>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          guolladat
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolladat\\"]"
            target="_blank"
          >
            Search for guolladat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            kalvoin verkonkudonnassa
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div />
    <div
      className="css-jxikhn"
    >
      Source: 
      smefin
    </div>
  </div>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          androgyn
           
          N
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgyn\\"]"
            target="_blank"
          >
            Search for androgyn in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyne
          </span>
           
          N
           
          eng
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynlâšvuotâ
          </span>
           
          A
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynlâšvuotâ\\"]"
            target="_blank"
          >
            Search for androgynlâšvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynvuotâ
          </span>
           
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynvuotâ\\"]"
            target="_blank"
          >
            Search for androgynvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-f0vlhc"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyna
          </span>
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"androgyna\\"]"
            target="_blank"
          >
            Search for androgyna in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1bntkfq"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyyni
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      <a
        href="https://satni.uit.no/termwiki/index.php?title=Servodatdieđa:androgyna"
        target="_blank"
      >
        This article on the TermWiki
      </a>
    </div>
  </div>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          gođđinmuorra
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"gođđinmuorra\\"]"
            target="_blank"
          >
            Search for gođđinmuorra in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolládat
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolládat\\"]"
            target="_blank"
          >
            Search for guolládat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolla
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolla\\"]"
            target="_blank"
          >
            Search for guolla in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            målepinne
          </span>
           
          S
           
          nob
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      SD-terms
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles DictArticle with examples 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          oainnáhus
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"oainnáhus\\"]"
            target="_blank"
          >
            Search for oainnáhus in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            syn
          </span>
           
          N
           
          nob
        </span>
      </div>
    </div>
    <div>
      <div
        className="css-1marblh"
      >
        <div>
          Iskkan sihkkut váivves oainnáhusa iežan čalmmiin, muhto dat liikká čuovvu mu.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg prøver å vaske vekk det triste synet fra øynene mine, men det følger med likevel.
        </div>
      </div>
      <div
        className="css-1marblh"
      >
        <div>
          Lean áidna vilges olmmoš ja dieđusge oainnáhus.
        </div>
        <div
          className="css-1msjh1x"
        >
          Jeg er det eneste hvite mennesket og selvfølgelig et syn.
        </div>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      smenob
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles DictArticle without examples 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          guolladat
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolladat\\"]"
            target="_blank"
          >
            Search for guolladat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            kalvoin verkonkudonnassa
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div />
    <div
      className="css-jxikhn"
    >
      Source: 
      smefin
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles Loading 1`] = `
<div>
  Loading …
</div>
`;

exports[`Storyshots Articles Only SDTermArticle 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          gođđinmuorra
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"gođđinmuorra\\"]"
            target="_blank"
          >
            Search for gođđinmuorra in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolládat
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolládat\\"]"
            target="_blank"
          >
            Search for guolládat in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            guolla
          </span>
           
          S
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolla\\"]"
            target="_blank"
          >
            Search for guolla in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            målepinne
          </span>
           
          S
           
          nob
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      Source: 
      SD-terms
    </div>
  </div>
</div>
`;

exports[`Storyshots Articles Only TermWikiArticle 1`] = `
<div
  className="css-1f4j338"
>
  <div
    className="css-1xgunds"
  >
    <div>
      <div
        className="css-1jd5iyo"
      >
        <span
          className="css-6n7j50"
        >
          androgyn
           
          N
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgyn\\"]"
            target="_blank"
          >
            Search for androgyn in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1inwbm7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyne
          </span>
           
          N
           
          eng
        </span>
      </div>
      <div
        className="css-1idyajt"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynlâšvuotâ
          </span>
           
          A
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynlâšvuotâ\\"]"
            target="_blank"
          >
            Search for androgynlâšvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-57uot7"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgynvuotâ
          </span>
           
           
          smn
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/?mode=smn#?search=cqp|[lemma%3D\\"androgynvuotâ\\"]"
            target="_blank"
          >
            Search for androgynvuotâ in Korp
          </a>
        </span>
      </div>
      <div
        className="css-f0vlhc"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyna
          </span>
           
          N
           
          sme
        </span>
        <span
          className="css-1lyvo2c"
        >
          <a
            href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"androgyna\\"]"
            target="_blank"
          >
            Search for androgyna in Korp
          </a>
        </span>
      </div>
      <div
        className="css-1bntkfq"
      >
        <span
          className="css-6n7j50"
        >
          <span
            className="css-1xbsv2t"
          >
            androgyyni
          </span>
           
          N
           
          fin
        </span>
      </div>
    </div>
    <div
      className="css-jxikhn"
    >
      <a
        href="https://satni.uit.no/termwiki/index.php?title=Servodatdieđa:androgyna"
        target="_blank"
      >
        This article on the TermWiki
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots DictArticle default 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div>
    <div
      className="css-1marblh"
    >
      <div>
        original0
      </div>
      <div
        className="css-1msjh1x"
      >
        translation0
      </div>
    </div>
    <div
      className="css-1marblh"
    >
      <div>
        original1
      </div>
      <div
        className="css-1msjh1x"
      >
        translation1
      </div>
    </div>
  </div>
  <div
    className="css-jxikhn"
  >
    Source: 
    smenob
  </div>
</div>
`;

exports[`Storyshots DictArticle without_examples 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div />
  <div
    className="css-jxikhn"
  >
    Source: 
    smenob
  </div>
</div>
`;

exports[`Storyshots Example default 1`] = `
<div
  className="css-1marblh"
>
  <div>
    original
  </div>
  <div
    className="css-1msjh1x"
  >
    translation
  </div>
</div>
`;

exports[`Storyshots Examples default 1`] = `
<div>
  <div
    className="css-1marblh"
  >
    <div>
      original0
    </div>
    <div
      className="css-1msjh1x"
    >
      translation0
    </div>
  </div>
  <div
    className="css-1marblh"
  >
    <div>
      original1
    </div>
    <div
      className="css-1msjh1x"
    >
      translation1
    </div>
  </div>
</div>
`;

exports[`Storyshots NounParadigm Inari saami noun 1`] = `
<table
  className="MuiTable-root-65"
>
  <thead
    className="MuiTableHead-root-66"
  >
    <th
      aria-sort={null}
      className="MuiTableCell-root-67 MuiTableCell-head-68"
      scope="col"
    >
       
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-67 MuiTableCell-head-68"
      scope="col"
    >
      Sg
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-67 MuiTableCell-head-68"
      scope="col"
    >
      Pl
    </th>
  </thead>
  <tbody
    className="MuiTableBody-root-75"
  >
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Nom
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kyeli
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kyeleh
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Gen
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kyele
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kuolij
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Acc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kyele
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kuolijd
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Ill
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kuálán
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kuolijd
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Loc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kyeleest
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kuolijn
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Com
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kuolijn
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kuolijguin
        </div>
        <div>
          kuolijgijn
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Abe
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kyelettáá
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        <div>
          kuolijttáá
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Par
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        colSpan={2}
        scope={undefined}
      >
        <div>
          kyellid
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-76"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        scope={undefined}
      >
        Ess
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-67 MuiTableCell-body-69"
        colSpan={2}
        scope={undefined}
      >
        <div>
          kyellin
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots NounParadigm Lule saami noun 1`] = `
<table
  className="MuiTable-root-49"
>
  <thead
    className="MuiTableHead-root-50"
  >
    <th
      aria-sort={null}
      className="MuiTableCell-root-51 MuiTableCell-head-52"
      scope="col"
    >
       
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-51 MuiTableCell-head-52"
      scope="col"
    >
      Sg
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-51 MuiTableCell-head-52"
      scope="col"
    >
      Pl
    </th>
  </thead>
  <tbody
    className="MuiTableBody-root-59"
  >
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Nom
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolle
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guole
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Gen
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guole
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolij
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Acc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolev
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolijt
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Ill
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolláj
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolijda
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Ine
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolen
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolijn
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Ela
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guoles
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolijs
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Com
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolijn
        </div>
        <div>
          guolijn
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolij
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Abe
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guoledagá
        </div>
        <div>
          guoledagi
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        <div>
          guolijdagá
        </div>
        <div>
          guolijdagi
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Abe
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        colSpan={2}
        scope={undefined}
      >
        <div>
          guoledak
        </div>
        <div>
          guoleda
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-60"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        scope={undefined}
      >
        Ess
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-51 MuiTableCell-body-53"
        colSpan={2}
        scope={undefined}
      >
        <div>
          guollen
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots NounParadigm North saami noun 1`] = `
<table
  className="MuiTable-root-33"
>
  <thead
    className="MuiTableHead-root-34"
  >
    <th
      aria-sort={null}
      className="MuiTableCell-root-35 MuiTableCell-head-36"
      scope="col"
    >
       
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-35 MuiTableCell-head-36"
      scope="col"
    >
      Sg
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-35 MuiTableCell-head-36"
      scope="col"
    >
      Pl
    </th>
  </thead>
  <tbody
    className="MuiTableBody-root-43"
  >
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Nom
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guolli
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guolit
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Gen
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guole
        </div>
        <div>
          guoli
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guliid
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Acc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guoli
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guliid
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Ill
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guollái
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guliide
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Loc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guolis
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guliin
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Com
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guliin
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        <div>
          guliiguin
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-44"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        scope={undefined}
      >
        Ess
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-35 MuiTableCell-body-37"
        colSpan={2}
        scope={undefined}
      >
        <div>
          guollin
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots NounParadigm South saami noun 1`] = `
<table
  className="MuiTable-root-17"
>
  <thead
    className="MuiTableHead-root-18"
  >
    <th
      aria-sort={null}
      className="MuiTableCell-root-19 MuiTableCell-head-20"
      scope="col"
    >
       
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-19 MuiTableCell-head-20"
      scope="col"
    >
      Sg
    </th>
    <th
      aria-sort={null}
      className="MuiTableCell-root-19 MuiTableCell-head-20"
      scope="col"
    >
      Pl
    </th>
  </thead>
  <tbody
    className="MuiTableBody-root-27"
  >
    <tr
      className="MuiTableRow-root-28"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        Nom
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          guelie
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          guelieh
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-28"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        Gen
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          guelien
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          gööli
        </div>
        <div>
          gueliej
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-28"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        Acc
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          gueliem
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          göölide
        </div>
        <div>
          guelide
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-28"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        Ill
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          gualan
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          göölide
        </div>
        <div>
          guelide
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-28"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        Ine
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          guelesne
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          gööline
        </div>
        <div>
          gueline
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-28"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        Ela
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          gueleste
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          göölijste
        </div>
        <div>
          guelijste
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-28"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        Com
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          gööline
        </div>
        <div>
          gueline
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        <div>
          gööligujmie
        </div>
        <div>
          gueliejgujmie
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-28"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        scope={undefined}
      >
        Ess
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-19 MuiTableCell-body-21"
        colSpan={2}
        scope={undefined}
      >
        <div>
          gööline
        </div>
        <div>
          gueline
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots SDTermArticle default 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div
    className="css-jxikhn"
  >
    Source: 
    SD-terms
  </div>
</div>
`;

exports[`Storyshots Source default 1`] = `
<div
  className="css-jxikhn"
>
  Source: 
  smenob
</div>
`;

exports[`Storyshots Stem default 1`] = `
<div
  className="css-1jd5iyo"
>
  <span
    className="css-6n7j50"
  >
    guolli
     
    N
     
    sme
  </span>
  <span
    className="css-1lyvo2c"
  >
    <a
      href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
      target="_blank"
    >
      Search for guolli in Korp
    </a>
  </span>
</div>
`;

exports[`Storyshots Stem key_nonzero 1`] = `
<div
  className="css-1inwbm7"
>
  <span
    className="css-6n7j50"
  >
    <span
      className="css-1xbsv2t"
    >
      guolli
    </span>
     
    N
     
    sme
  </span>
  <span
    className="css-1lyvo2c"
  >
    <a
      href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
      target="_blank"
    >
      Search for guolli in Korp
    </a>
  </span>
</div>
`;

exports[`Storyshots Stem lang_nonsme 1`] = `
<div
  className="css-1jd5iyo"
>
  <span
    className="css-6n7j50"
  >
    guolli
     
    N
     
    smj
  </span>
  <span
    className="css-1lyvo2c"
  >
    <a
      href="http://gtweb.uit.no/korp/?mode=smj#?search=cqp|[lemma%3D\\"guolli\\"]"
      target="_blank"
    >
      Search for guolli in Korp
    </a>
  </span>
</div>
`;

exports[`Storyshots Stem non_sami 1`] = `
<div
  className="css-1jd5iyo"
>
  <span
    className="css-6n7j50"
  >
    guolli
     
    N
     
    nob
  </span>
</div>
`;

exports[`Storyshots Stems default 1`] = `
<div>
  <div
    className="css-1jd5iyo"
  >
    <span
      className="css-6n7j50"
    >
      guolli
       
      N
       
      sme
    </span>
    <span
      className="css-1lyvo2c"
    >
      <a
        href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
        target="_blank"
      >
        Search for guolli in Korp
      </a>
    </span>
  </div>
  <div
    className="css-1inwbm7"
  >
    <span
      className="css-6n7j50"
    >
      <span
        className="css-1xbsv2t"
      >
        guolli
      </span>
       
      N
       
      sme
    </span>
    <span
      className="css-1lyvo2c"
    >
      <a
        href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
        target="_blank"
      >
        Search for guolli in Korp
      </a>
    </span>
  </div>
  <div
    className="css-1idyajt"
  >
    <span
      className="css-6n7j50"
    >
      <span
        className="css-1xbsv2t"
      >
        guolli
      </span>
       
      N
       
      nob
    </span>
  </div>
</div>
`;

exports[`Storyshots TermWikiArticle default 1`] = `
<div
  className="css-1xgunds"
>
  <div>
    <div
      className="css-1jd5iyo"
    >
      <span
        className="css-6n7j50"
      >
        guolli
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1inwbm7"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        sme
      </span>
      <span
        className="css-1lyvo2c"
      >
        <a
          href="http://gtweb.uit.no/korp/#?search=cqp|[lemma%3D\\"guolli\\"]"
          target="_blank"
        >
          Search for guolli in Korp
        </a>
      </span>
    </div>
    <div
      className="css-1idyajt"
    >
      <span
        className="css-6n7j50"
      >
        <span
          className="css-1xbsv2t"
        >
          guolli
        </span>
         
        N
         
        nob
      </span>
    </div>
  </div>
  <div
    className="css-jxikhn"
  >
    <a
      href="https://satni.uit.no/termwiki/index.php?title=Luonddudieđa ja matematihkka:guolli"
      target="_blank"
    >
      This article on the TermWiki
    </a>
  </div>
</div>
`;
